--- a/config/database.yml
+++ b/config/database.yml
@@ -19,11 +19,10 @@ default: &default
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: <%= ENV.fetch("LISTOPIA_DATABASE_USERNAME") { "postgres" } %>
-  password: <%= ENV.fetch("LISTOPIA_DATABASE_PASSWORD") { "postgres" } %>
+  password: <%= ENV.fetch("LISTOPIA_DATABASE_PASSWORD") { "" } %>
   host: <%= ENV.fetch("LISTOPIA_DATABASE_HOST") { "localhost" } %>
   port: <%= ENV.fetch("LISTOPIA_DATABASE_PORT") { 5432 } %>
   # The schema search path is set to public by default.
-
 
 development:
   <<: *default
