fixed cypress binaries

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ cache:
   paths:
     - vendor/bundle
     - node_modules
-    - ~/.cache/Cypress
+    - /root/.cache/Cypress
 
 stages: # List of stages for jobs, and their order of execution
   - e2e
