--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,7 @@ build-job: # This job runs in the build stage, which runs first.
     - curl -fsSL https://bun.sh/install | bash
     - source ~/.bashrc
     - bun install
+    - npx cypress install
 
     # Setup Rails (skip server)
     - bin/setup --skip-server
