--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,3 +54,8 @@ build-job: # This job runs in the build stage, which runs first.
     # Verify Cypress and run tests
     - npx cypress --version
     - npx cypress run --headless --browser electron
+  artifacts:
+    when: always
+    paths:
+      - cypress/screenshots/
+    expire_in: 1 day
